--- a/OcalimochoApp/app/src/main/AndroidManifest.xml
+++ b/OcalimochoApp/app/src/main/AndroidManifest.xml
@@ -6,26 +6,30 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:screenOrientation="landscape"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         >
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
         <activity
             android:name=".SeleccionJugadores"
-            android:label="@string/title_activity_seleccion_jugadores" >
+            android:label="@string/title_activity_seleccion_jugadores"
+            android:screenOrientation="portrait">
+
         </activity>
 
         <activity
             android:name=".Tablero"
-            android:label="Nombre casilla" >
+            android:label="Nombre casilla"
+            android:screenOrientation="portrait">
         </activity>
     </application>
 
