--- a/OcalimochoApp/app/src/main/AndroidManifest.xml
+++ b/OcalimochoApp/app/src/main/AndroidManifest.xml
@@ -32,6 +32,14 @@
             android:name=".MimicaActivity"
             android:label="@string/title_activity_mimica" >
         </activity>
+        <activity
+            android:name=".YoNuncaActivity"
+            android:label="@string/title_activity_yo_nunca" >
+        </activity>
+        <activity
+            android:name=".TabuActivity"
+            android:label="@string/title_activity_tabu" >
+        </activity>
     </application>
 
 </manifest>
