--- a/OcalimochoApp/app/build.gradle
+++ b/OcalimochoApp/app/build.gradle
@@ -21,6 +21,7 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:22.0.0'
+    compile 'com.android.support:appcompat-v7:22.2.1'
     compile 'com.google.code.gson:gson:2.3.1'
+    compile 'com.android.support:cardview-v7:22.2.0'
 }
