--- a/OcalimochoApp/app/src/main/AndroidManifest.xml
+++ b/OcalimochoApp/app/src/main/AndroidManifest.xml
@@ -60,6 +60,10 @@
             android:name=".PreguntaActivity"
             android:label="@string/title_activity_pregunta" >
         </activity>
+        <activity
+            android:name=".RankingActivity"
+            android:label="@string/title_activity_ranking" >
+        </activity>
     </application>
 
 </manifest>
