juego de marcas y redistribución de casillas

--- a/OcalimochoApp/app/src/main/AndroidManifest.xml
+++ b/OcalimochoApp/app/src/main/AndroidManifest.xml
@@ -64,6 +64,10 @@
             android:name=".RankingActivity"
             android:label="@string/title_activity_ranking" >
         </activity>
+        <activity
+            android:name=".MarcasActivity"
+            android:label="@string/title_activity_marcas" >
+        </activity>
     </application>
 
 </manifest>
