--- a/OcalimochoApp/app/build.gradle
+++ b/OcalimochoApp/app/build.gradle
@@ -24,4 +24,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:22.2.1'
     compile 'com.google.code.gson:gson:2.3.1'
     compile 'com.android.support:cardview-v7:22.2.0'
+    compile 'com.bartoszlipinski.flippablestackview:library:1.2.1'
 }
