Añadida vista de ayuda y modificada vista de pregunta

--- a/OcalimochoApp/app/src/main/AndroidManifest.xml
+++ b/OcalimochoApp/app/src/main/AndroidManifest.xml
@@ -68,6 +68,10 @@
             android:name=".MarcasActivity"
             android:label="@string/title_activity_marcas" >
         </activity>
+        <activity
+            android:name=".Activity_ayuda"
+            android:label="@string/title_activity_activity_ayuda" >
+        </activity>
     </application>
 
 </manifest>
