--- a/OcalimochoApp/app/build.gradle
+++ b/OcalimochoApp/app/build.gradle
@@ -1,13 +1,14 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.github.ben-manes.versions'
 
 android {
-    compileSdkVersion 21
-    buildToolsVersion "21.1.2"
+    compileSdkVersion 23
+    buildToolsVersion "23.0.1"
 
     defaultConfig {
         applicationId "com.example.cokepedreira.ocalimochoapp"
         minSdkVersion 17
-        targetSdkVersion 21
+        targetSdkVersion 23
         versionCode 1
         versionName "1.0"
     }
@@ -23,6 +24,7 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.2.1'
     compile 'com.google.code.gson:gson:2.3.1'
-    compile 'com.android.support:cardview-v7:22.2.0'
+    compile 'com.android.support:cardview-v7:22.2.1'
     compile 'com.bartoszlipinski.flippablestackview:library:1.2.1'
+    compile 'com.melnykov:floatingactionbutton:1.3.0'
 }
