--- a/OcalimochoApp/app/build.gradle
+++ b/OcalimochoApp/app/build.gradle
@@ -27,4 +27,5 @@ dependencies {
     compile 'com.google.code.gson:gson:2.3.1'
     compile 'com.bartoszlipinski.flippablestackview:library:1.2.1'
     compile 'com.melnykov:floatingactionbutton:1.3.0'
+    compile 'com.alexzh:circleimageview:1.1.1@aar'
 }
