--- a/OcalimochoApp/app/src/main/AndroidManifest.xml
+++ b/OcalimochoApp/app/src/main/AndroidManifest.xml
@@ -6,7 +6,8 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        >
 
         <activity
             android:name=".MainActivity"
@@ -21,7 +22,7 @@
         <activity
             android:name=".Tablero"
             android:label="Nombre casilla"
-            android:screenOrientation="portrait" >
+            android:screenOrientation="portrait">
         </activity>
         <activity
             android:name=".MimicaActivity"
