--- a/OcalimochoApp/app/build.gradle
+++ b/OcalimochoApp/app/build.gradle
@@ -28,5 +28,5 @@ dependencies {
     compile 'com.bartoszlipinski.flippablestackview:library:1.2.1'
     compile 'com.melnykov:floatingactionbutton:1.3.0'
     compile 'com.android.support:design:23.0.1'
-
+    compile 'com.jakewharton:butterknife:7.0.1'
 }
