--- a/OcalimochoApp/app/src/main/AndroidManifest.xml
+++ b/OcalimochoApp/app/src/main/AndroidManifest.xml
@@ -6,23 +6,20 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme.Light"
-        >
-
+        android:theme="@style/AppTheme" >
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name"
+            android:label="@string/title_activity_inicio"
             android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name=".Tablero"
             android:label="Nombre casilla"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name=".MimicaActivity"
@@ -67,6 +64,10 @@
         <activity
             android:name=".Activity_ayuda"
             android:label="@string/title_activity_activity_ayuda" >
+        </activity>
+        <activity
+            android:name=".SelectorJugadoresActivity"
+            android:label="@string/title_activity_activity_main">
         </activity>
     </application>
 
