Añadida lista minijuegos

--- a/OcalimochoApp/app/src/main/AndroidManifest.xml
+++ b/OcalimochoApp/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
             android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -67,7 +68,11 @@
         </activity>
         <activity
             android:name=".SelectorJugadoresActivity"
-            android:label="@string/title_activity_activity_main">
+            android:label="@string/title_activity_activity_main" >
+        </activity>
+        <activity
+            android:name=".ListaMinijuegosActivity"
+            android:label="@string/title_activity_lista_minijuegos" >
         </activity>
     </application>
 
